--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Welcome</title>
 </head>
 <body>
-  <h1>Welcome to nfss!</h1>
+  <h1>Welcome to nfsesss!</h1>
   <p>If you see this page, the nginx web server is successfully installed and working. Further configuration is required.</p>
 
   <p>For online documentation and support please refer to
@@ -16,3 +16,4 @@
 </body>
 
 </html>
+
